--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,33 @@
 {
+  "functions": {
+    "source": "functions"
+  },
   "emulators": {
+    "auth": {
+      "port": 9099
+    },
     "functions": {
       "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "pubsub": {
+      "port": 8085
     },
     "ui": {
       "enabled": true
     }
+  },
+  "hosting": {
+    "public": "firebaseFunctions",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
 }
